--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -9151,9 +9151,9 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
-              individualJobStatus:
-                description: IndividualJobStatus tracks the status of individual Jobs
-                  within ReplicatedJobs.
+              individualJobsStatus:
+                description: IndividualJobsStatus tracks the status of individual
+                  Jobs within ReplicatedJobs.
                 items:
                   description: IndividualJobStatus holds the status of an individual
                     Job within a ReplicatedJob.
