--- a/config/components/prometheus/service.yaml
+++ b/config/components/prometheus/service.yaml
@@ -1,20 +1,21 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jobset-webhook-service
+  name: jobset-metrics-service
+  namespace: jobset-system
   labels:
-    app.kubernetes.io/managed-by: Kustomize
-    app.kubernetes.io/version: "0.8.1"
     app.kubernetes.io/name: jobset
     app.kubernetes.io/instance: jobset
-    app.kubernetes.io/component: webhook
+    app.kubernetes.io/component: controller
+    app.kubernetes.io/managed-by: Kustomize
 spec:
   type: ClusterIP
   selector:
     app.kubernetes.io/name: jobset
     app.kubernetes.io/instance: jobset
+    app.kubernetes.io/component: controller
   ports:
-    - name: webhook
+    - name: https
+      port: 8443
       protocol: TCP
-      port: 443
-      targetPort: webhook
+      targetPort: 8443
