Change IndividualJobRecreates to IndividualJobStatus.Recreates (#958)
* Change IndividualJobRecreates to IndividualJobStatus.Recreates

* Review comments

* Simplify resetIndividualJobRecreates

* Review nit

* Add documentation that Recreates is reset to 0 on JobSet restart

* Run make generate

* Create IndividualJobsStatus entry on job creation if it does not exist

* Add integration tests

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -9151,14 +9151,30 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
-              individualJobRecreates:
-                additionalProperties:
-                  format: int32
-                  type: integer
-                description: |-
-                  IndividualJobRecreates tracks the number of times an individual Job within
-                  the JobSet has been recreated (i.e. in case of RecreateJob failure policy).
-                type: object
+              individualJobsStatus:
+                description: IndividualJobsStatus tracks the status of individual
+                  Jobs within ReplicatedJobs.
+                items:
+                  description: IndividualJobStatus holds the status of an individual
+                    Job within a ReplicatedJob.
+                  properties:
+                    name:
+                      description: Name of the Job.
+                      type: string
+                    recreates:
+                      description: |-
+                        Recreates is the number of times an individual Job has been recreated.
+                        This counter is reset to 0 if the parent ReplicatedJob or JobSet is restarted.
+                      format: int32
+                      type: integer
+                  required:
+                  - name
+                  - recreates
+                  type: object
+                type: array
+                x-kubernetes-list-map-keys:
+                - name
+                x-kubernetes-list-type: map
               replicatedJobsStatus:
                 description: ReplicatedJobsStatus track the number of JobsReady for
                   each replicatedJob.
