chore(manifests): Set SeccompProfile in the default JobSet manifests
Signed-off-by: Andrey Velichkevich <andrey.velichkevich@gmail.com>

--- a/charts/jobset/values.yaml
+++ b/charts/jobset/values.yaml
@@ -70,7 +70,7 @@ controller:
   affinity: {}
   # -- Tolerations of the jobset controller pods.
   tolerations: []
-  # -- Security context of the jobset controller pods.
+  # -- Security context of all jobset controller containers.
   podSecurityContext:
     runAsNonRoot: true
     seccompProfile:
