--- a/charts/jobset/values.yaml
+++ b/charts/jobset/values.yaml
@@ -75,6 +75,7 @@ controller:
     runAsNonRoot: true
     seccompProfile:
       type: RuntimeDefault
+  hostNetwork: false
 certManager:
   # -- Whether to use cert-manager to generate certificates for the jobset webhook.
   enable: false
