charts(jobset): document controller.hostNetwork and regen README
Signed-off-by: Mohammad Mamdouhi <m.mamdouhi@instadeep.com>

--- a/charts/jobset/values.yaml
+++ b/charts/jobset/values.yaml
@@ -75,6 +75,7 @@ controller:
     runAsNonRoot: true
     seccompProfile:
       type: RuntimeDefault
+  # -- Run the controller/webhook Pods on the node’s network namespace instead of the overlay CNI.
   hostNetwork: false
 certManager:
   # -- Whether to use cert-manager to generate certificates for the jobset webhook.
