--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -115,7 +115,10 @@ spec:
                     items:
                       description: |-
                         FailurePolicyRule defines a FailurePolicyAction to be executed if a child job
-                        fails due to a reason listed in OnJobFailureReasons.
+                        fails due to a reason listed in OnJobFailureReasons and a message pattern
+                        listed in OnJobFailureMessagePatterns. The rule must match both the job
+                        failure reason and the job failure message. The rules are evaluated in
+                        order and the first matching rule is executed.
                       properties:
                         action:
                           description: The action to take if the rule is matched.
@@ -130,13 +133,24 @@ spec:
                             The name is defaulted to 'failurePolicyRuleN' where N is the index of the failure policy rule.
                             The name must match the regular expression "^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$".
                           type: string
+                        onJobFailureMessagePatterns:
+                          description: |-
+                            The requirement on the job failure message. The requirement is satisfied
+                            if at least one pattern (regex) matches the job failure message. An
+                            empty list matches any job failure message.
+                            The syntax of the regular expressions accepted is the same general
+                            syntax used by Perl, Python, and other languages. More precisely, it is
+                            the syntax accepted by RE2 and described at https://golang.org/s/re2syntax,
+                            except for \C. For an overview of the syntax, see
+                            https://pkg.go.dev/regexp/syntax.
+                          items:
+                            type: string
+                          type: array
                         onJobFailureReasons:
                           description: |-
-                            The requirement on the job failure reasons. The requirement
-                            is satisfied if at least one reason matches the list.
-                            The rules are evaluated in order, and the first matching
-                            rule is executed.
-                            An empty list applies the rule to any job failure reason.
+                            The requirement on the job failure reasons. The requirement is satisfied
+                            if at least one reason matches the list. An empty list matches any job
+                            failure reason.
                           items:
                             type: string
                           type: array
