--- a/charts/jobset/crds/jobset.x-k8s.io_jobsets.yaml
+++ b/charts/jobset/crds/jobset.x-k8s.io_jobsets.yaml
@@ -57,11 +57,11 @@ spec:
           metadata:
             type: object
           spec:
-            description: JobSetSpec defines the desired state of JobSet
+            description: spec is the specification for jobset
             properties:
               coordinator:
                 description: |-
-                  Coordinator can be used to assign a specific pod as the coordinator for
+                  coordinator can be used to assign a specific pod as the coordinator for
                   the JobSet. If defined, an annotation will be added to all Jobs and pods with
                   coordinator pod, which contains the stable network endpoint where the
                   coordinator pod can be reached.
@@ -69,16 +69,16 @@ spec:
                 properties:
                   jobIndex:
                     description: |-
-                      JobIndex is the index of Job which contains the coordinator pod
+                      jobIndex is the index of Job which contains the coordinator pod
                       (i.e., for a ReplicatedJob with N replicas, there are Job indexes 0 to N-1).
                     type: integer
                   podIndex:
-                    description: PodIndex is the Job completion index of the coordinator
+                    description: podIndex is the Job completion index of the coordinator
                       pod.
                     type: integer
                   replicatedJob:
                     description: |-
-                      ReplicatedJob is the name of the ReplicatedJob which contains
+                      replicatedJob is the name of the ReplicatedJob which contains
                       the coordinator pod.
                     type: string
                 required:
@@ -86,21 +86,21 @@ spec:
                 type: object
               failurePolicy:
                 description: |-
-                  FailurePolicy, if set, configures when to declare the JobSet as
+                  failurePolicy configures when to declare the JobSet as
                   failed.
                   The JobSet is always declared failed if any job in the set
                   finished with status failed.
                 properties:
                   maxRestarts:
                     description: |-
-                      MaxRestarts defines the limit on the number of JobSet restarts.
+                      maxRestarts defines the limit on the number of JobSet restarts.
                       A restart is achieved by recreating all active child jobs.
                     format: int32
                     type: integer
                   restartStrategy:
                     default: Recreate
                     description: |-
-                      RestartStrategy defines the strategy to use when restarting the JobSet.
+                      restartStrategy defines the strategy to use when restarting the JobSet.
                       Defaults to Recreate.
                     enum:
                     - Recreate
@@ -108,7 +108,7 @@ spec:
                     type: string
                   rules:
                     description: |-
-                      List of failure policy rules for this JobSet.
+                      rules is a list of failure policy rules for this JobSet.
                       For a given Job failure, the rules will be evaluated in order,
                       and only the first matching rule will be executed.
                       If no matching rule is found, the RestartJobSet action is applied.
@@ -121,7 +121,7 @@ spec:
                         order and the first matching rule is executed.
                       properties:
                         action:
-                          description: The action to take if the rule is matched.
+                          description: action to take if the rule is matched.
                           enum:
                           - FailJobSet
                           - RestartJobSet
@@ -129,13 +129,14 @@ spec:
                           type: string
                         name:
                           description: |-
-                            The name of the failure policy rule.
+                            name of the failure policy rule.
                             The name is defaulted to 'failurePolicyRuleN' where N is the index of the failure policy rule.
                             The name must match the regular expression "^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$".
                           type: string
                         onJobFailureMessagePatterns:
                           description: |-
-                            The requirement on the job failure message. The requirement is satisfied
+                            onJobFailureMessagePatterns is a requirement on the job failure messages.
+                            The requirement is satisfied
                             if at least one pattern (regex) matches the job failure message. An
                             empty list matches any job failure message.
                             The syntax of the regular expressions accepted is the same general
@@ -148,7 +149,8 @@ spec:
                           type: array
                         onJobFailureReasons:
                           description: |-
-                            The requirement on the job failure reasons. The requirement is satisfied
+                            onJobFailureReasons is a list of job failures reasons.
+                            The requirement is satisfied
                             if at least one reason matches the list. An empty list matches any job
                             failure reason.
                           items:
@@ -156,7 +158,7 @@ spec:
                           type: array
                         targetReplicatedJobs:
                           description: |-
-                            TargetReplicatedJobs are the names of the replicated jobs the operator applies to.
+                            targetReplicatedJobs are the names of the replicated jobs the operator applies to.
                             An empty list will apply to all replicatedJobs.
                           items:
                             type: string
@@ -173,7 +175,7 @@ spec:
                   rule: self == oldSelf
               managedBy:
                 description: |-
-                  ManagedBy is used to indicate the controller or entity that manages a JobSet.
+                  managedBy is used to indicate the controller or entity that manages a JobSet.
                   The built-in JobSet controller reconciles JobSets which don't have this
                   field at all or the field value is the reserved string
                   `jobset.sigs.k8s.io/jobset-controller`, but skips reconciling JobSets
@@ -186,22 +188,22 @@ spec:
                   The field is immutable.
                 type: string
               network:
-                description: Network defines the networking options for the jobset.
+                description: network defines the networking options for the jobset.
                 properties:
                   enableDNSHostnames:
                     description: |-
-                      EnableDNSHostnames allows pods to be reached via their hostnames.
+                      enableDNSHostnames allows pods to be reached via their hostnames.
                       Pods will be reachable using the fully qualified pod hostname:
                       <jobSet.name>-<spec.replicatedJob.name>-<job-index>-<pod-index>.<subdomain>
                     type: boolean
                   publishNotReadyAddresses:
                     description: |-
-                      Indicates if DNS records of pods should be published before the pods are ready.
+                      publishNotReadyAddresses indicates if DNS records of pods should be published before the pods are ready.
                       Defaults to True.
                     type: boolean
                   subdomain:
                     description: |-
-                      Subdomain is an explicit choice for a network subdomain name
+                      subdomain is an explicit choice for a network subdomain name
                       When set, any replicated job in the set is added to this network.
                       Defaults to <jobSet.name> if not set.
                     type: string
@@ -210,13 +212,13 @@ spec:
                 - message: Value is immutable
                   rule: self == oldSelf
               replicatedJobs:
-                description: ReplicatedJobs is the group of jobs that will form the
+                description: replicatedJobs is the group of jobs that will form the
                   set.
                 items:
                   properties:
                     dependsOn:
                       description: |-
-                        DependsOn is an optional list that specifies the preceding ReplicatedJobs upon which
+                        dependsOn is an optional list that specifies the preceding ReplicatedJobs upon which
                         the current ReplicatedJob depends. If specified, the ReplicatedJob will be created
                         only after the referenced ReplicatedJobs reach their desired state.
                         The Order of ReplicatedJobs is defined by their enumeration in the slice.
@@ -230,10 +232,10 @@ spec:
                           ReplicatedJob status.
                         properties:
                           name:
-                            description: Name of the previous ReplicatedJob.
+                            description: name of the previous ReplicatedJob.
                             type: string
                           status:
-                            description: Status defines the condition for the ReplicatedJob.
+                            description: status defines the condition for the ReplicatedJob.
                               Only Ready or Complete status can be set.
                             enum:
                             - Ready
@@ -253,23 +255,23 @@ spec:
                         rule: self == oldSelf
                     groupName:
                       default: default
-                      description: GroupName defines the name of the group this ReplicatedJob
+                      description: groupName defines the name of the group this ReplicatedJob
                         belongs to. Defaults to "default"
                       type: string
                     name:
                       description: |-
-                        Name is the name of the entry and will be used as a suffix
+                        name is the name of the entry and will be used as a suffix
                         for the Job name.
                       type: string
                     replicas:
                       default: 1
                       description: |-
-                        Replicas is the number of jobs that will be created from this ReplicatedJob's template.
+                        replicas is the number of jobs that will be created from this ReplicatedJob's template.
                         Jobs names will be in the format: <jobSet.name>-<spec.replicatedJob.name>-<job-index>
                       format: int32
                       type: integer
                     template:
-                      description: Template defines the template of the Job that will
+                      description: template defines the template of the Job that will
                         be created.
                       properties:
                         metadata:
@@ -9418,12 +9420,12 @@ spec:
                 x-kubernetes-list-type: map
               startupPolicy:
                 description: |-
-                  StartupPolicy, if set, configures in what order jobs must be started
+                  startupPolicy configures in what order jobs must be started
                   Deprecated: StartupPolicy is deprecated, please use the DependsOn API.
                 properties:
                   startupPolicyOrder:
                     description: |-
-                      StartupPolicyOrder determines the startup order of the ReplicatedJobs.
+                      startupPolicyOrder determines the startup order of the ReplicatedJobs.
                       AnyOrder means to start replicated jobs in any order.
                       InOrder means to start them as they are listed in the JobSet. A ReplicatedJob is started only
                       when all the jobs of the previous one are ready.
@@ -9439,13 +9441,13 @@ spec:
                   rule: self == oldSelf
               successPolicy:
                 description: |-
-                  SuccessPolicy configures when to declare the JobSet as
+                  successPolicy configures when to declare the JobSet as
                   succeeded.
                   The JobSet is always declared succeeded if all jobs in the set
                   finished with status complete.
                 properties:
                   operator:
-                    description: Operator determines either All or Any of the selected
+                    description: operator determines either All or Any of the selected
                       jobs should succeed to consider the JobSet successful
                     enum:
                     - All
@@ -9453,7 +9455,7 @@ spec:
                     type: string
                   targetReplicatedJobs:
                     description: |-
-                      TargetReplicatedJobs are the names of the replicated jobs the operator will apply to.
+                      targetReplicatedJobs are the names of the replicated jobs the operator will apply to.
                       A null or empty list will apply to all replicatedJobs.
                     items:
                       type: string
@@ -9466,11 +9468,11 @@ spec:
                 - message: Value is immutable
                   rule: self == oldSelf
               suspend:
-                description: Suspend suspends all running child Jobs when set to true.
+                description: suspend suspends all running child Jobs when set to true.
                 type: boolean
               ttlSecondsAfterFinished:
                 description: |-
-                  TTLSecondsAfterFinished limits the lifetime of a JobSet that has finished
+                  ttlSecondsAfterFinished limits the lifetime of a JobSet that has finished
                   execution (either Complete or Failed). If this field is set,
                   TTLSecondsAfterFinished after the JobSet finishes, it is eligible to be
                   automatically deleted. When the JobSet is being deleted, its lifecycle
@@ -9486,9 +9488,10 @@ spec:
               rule: '!(has(self.startupPolicy) && self.startupPolicy.startupPolicyOrder
                 == ''InOrder'' && self.replicatedJobs.exists(x, has(x.dependsOn)))'
           status:
-            description: JobSetStatus defines the observed state of JobSet
+            description: status is the status of the jobset
             properties:
               conditions:
+                description: conditions track status
                 items:
                   description: Condition contains details for one aspect of the current
                     state of this API Resource.
@@ -9548,7 +9551,7 @@ spec:
                 - type
                 x-kubernetes-list-type: map
               replicatedJobsStatus:
-                description: ReplicatedJobsStatus track the number of JobsReady for
+                description: replicatedJobsStatus track the number of JobsReady for
                   each replicatedJob.
                 items:
                   description: ReplicatedJobStatus defines the observed ReplicatedJobs
@@ -9556,31 +9559,31 @@ spec:
                   properties:
                     active:
                       description: |-
-                        Active is the number of child Jobs with at least 1 pod in a running or pending state
+                        active is the number of child Jobs with at least 1 pod in a running or pending state
                         which are not marked for deletion.
                       format: int32
                       type: integer
                     failed:
-                      description: Failed is the number of failed child Jobs.
+                      description: failed is the number of failed child Jobs.
                       format: int32
                       type: integer
                     name:
-                      description: Name of the ReplicatedJob.
+                      description: name of the ReplicatedJob.
                       type: string
                     ready:
                       description: |-
-                        Ready is the number of child Jobs where the number of ready pods and completed pods
+                        ready is the number of child Jobs where the number of ready pods and completed pods
                         is greater than or equal to the total expected pod count for the Job (i.e., the minimum
                         of job.spec.parallelism and job.spec.completions).
                       format: int32
                       type: integer
                     succeeded:
-                      description: Succeeded is the number of successfully completed
+                      description: succeeded is the number of successfully completed
                         child Jobs.
                       format: int32
                       type: integer
                     suspended:
-                      description: Suspended is the number of child Jobs which are
+                      description: suspended is the number of child Jobs which are
                         in a suspended state.
                       format: int32
                       type: integer
@@ -9597,19 +9600,19 @@ spec:
                 - name
                 x-kubernetes-list-type: map
               restarts:
-                description: Restarts tracks the number of times the JobSet has restarted
+                description: restarts tracks the number of times the JobSet has restarted
                   (i.e. recreated in case of RecreateAll policy).
                 format: int32
                 type: integer
               restartsCountTowardsMax:
-                description: RestartsCountTowardsMax tracks the number of times the
+                description: restartsCountTowardsMax tracks the number of times the
                   JobSet has restarted that counts towards the maximum allowed number
                   of restarts.
                 format: int32
                 type: integer
               terminalState:
                 description: |-
-                  TerminalState the state of the JobSet when it finishes execution.
+                  terminalState the state of the JobSet when it finishes execution.
                   It can be either Completed or Failed. Otherwise, it is empty by default.
                 type: string
             type: object
