--- a/charts/jobset/templates/webhook/service.yaml
+++ b/charts/jobset/templates/webhook/service.yaml
@@ -18,6 +18,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "jobset.webhook.service.name" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "jobset.webhook.labels" . | nindent 4 }}
 spec:
