--- a/.golangci-kal.yml
+++ b/.golangci-kal.yml
@@ -17,11 +17,10 @@ linters:
               - "conditions" # Ensure conditions have the correct json tags and markers.
               - "conflictingmarkers"
               - "duplicatemarkers" # Ensure there are no exact duplicate markers. for types and fields.
-              #- "forbiddenmarkers" # Ensure that types and fields do not contain any markers that are forbidden.
               # - "integers" # Ensure only int32 and int64 are used for integers.
               - "jsontags" # Ensure every field has a json tag.
               # - "maxlength" # Ensure all strings and arrays have maximum lengths/maximum items.
-              # - "nobools" # Bools do not evolve over time, should use enums instead.
+              - "nobools" # Bools do not evolve over time, should use enums instead.
               - "nodurations" # Prevents usage of `Duration` types.
               - "nofloats" # Ensure floats are not used.
               # - "nomaps" # Ensure maps are not used.
