--- a/config/components/rbac/role.yaml
+++ b/config/components/rbac/role.yaml
@@ -100,3 +100,23 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - scheduling.k8s.io
+  resources:
+  - workloads
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - scheduling.k8s.io
+  resources:
+  - workloads/status
+  verbs:
+  - get
+  - patch
+  - update
