Remove pod create permission from controller

--- a/config/components/rbac/role.yaml
+++ b/config/components/rbac/role.yaml
@@ -25,6 +25,16 @@ rules:
   - ""
   resources:
   - pods
+  verbs:
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - services
   verbs:
   - create
