refactor: split webhook manifests into separated files
Signed-off-by: Yi Chen <github@chenyicn.net>

--- a/config/components/webhook/kustomization.yaml
+++ b/config/components/webhook/kustomization.yaml
@@ -1,6 +1,7 @@
 resources:
-- manifests.yaml
 - service.yaml
+- mutating_webhook_configuration.yaml
+- validating_webhook_configuration.yaml
 
 configurations:
 - kustomizeconfig.yaml
