refactor: merge webhook patches into webhook configurations
Signed-off-by: Yi Chen <github@chenyicn.net>

--- a/config/components/webhook/mutating_webhook_configuration.yaml
+++ b/config/components/webhook/mutating_webhook_configuration.yaml
@@ -31,6 +31,10 @@ webhooks:
       path: /mutate--v1-pod
   failurePolicy: Fail
   name: mpod.kb.io
+  objectSelector:
+    matchExpressions:
+    - key: jobset.sigs.k8s.io/jobset-name
+      operator: Exists
   rules:
   - apiGroups:
     - ""
