--- a/config/components/webhook/validating_webhook_configuration.yaml
+++ b/config/components/webhook/validating_webhook_configuration.yaml
@@ -32,6 +32,10 @@ webhooks:
       path: /validate--v1-pod
   failurePolicy: Fail
   name: vpod.kb.io
+  objectSelector:
+    matchExpressions:
+    - key: jobset.sigs.k8s.io/jobset-name
+      operator: Exists
   rules:
   - apiGroups:
     - ""
