--- a/config/components/rbac/cluster_role_binding.yaml
+++ b/config/components/rbac/cluster_role_binding.yaml
@@ -1,18 +1,18 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
+  name: manager-rolebinding
   labels:
-    app.kubernetes.io/name: rolebinding
-    app.kubernetes.io/instance: manager-secrets-rolebinding
+    app.kubernetes.io/name: clusterrolebinding
+    app.kubernetes.io/instance: manager-rolebinding
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: jobset
     app.kubernetes.io/part-of: jobset
     app.kubernetes.io/managed-by: kustomize
-  name: manager-secrets-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: manager-secrets-role
+  kind: ClusterRole
+  name: manager-role
 subjects:
 - kind: ServiceAccount
   name: controller-manager
