--- a/config/components/rbac/kustomization.yaml
+++ b/config/components/rbac/kustomization.yaml
@@ -7,10 +7,8 @@ resources:
 - service_account.yaml
 - role.yaml
 - role_binding.yaml
-- leader_election_role.yaml
-- leader_election_role_binding.yaml
-- manager_secrets_role.yaml
-- manager_secrets_role_binding.yaml
+- cluster_role.yaml
+- cluster_role_binding.yaml
 # Comment the following 4 lines if you want to disable
 # protecting your /metrics endpoint.
 - auth_proxy_role.yaml
