--- a/config/components/rbac/role_binding.yaml
+++ b/config/components/rbac/role_binding.yaml
@@ -1,18 +1,18 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
+  name: leader-election-rolebinding
   labels:
-    app.kubernetes.io/name: clusterrolebinding
-    app.kubernetes.io/instance: manager-rolebinding
+    app.kubernetes.io/name: rolebinding
+    app.kubernetes.io/instance: leader-election-rolebinding
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: jobset
     app.kubernetes.io/part-of: jobset
     app.kubernetes.io/managed-by: kustomize
-  name: manager-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: manager-role
+  kind: Role
+  name: leader-election-role
 subjects:
 - kind: ServiceAccount
   name: controller-manager
