Update KEP number

--- a/keps/467-InPlaceRestart/kep.yaml
+++ b/keps/467-InPlaceRestart/kep.yaml
@@ -1,5 +1,5 @@
 title: Short term solution for in place restarts
-kep-number: NNN
+kep-number: 467
 authors:
   - "@giuseppett"
 status: provisional
