Replace "in place" with "in-place"

--- a/keps/467-InPlaceRestart/kep.yaml
+++ b/keps/467-InPlaceRestart/kep.yaml
@@ -1,4 +1,4 @@
-title: Short term solution for in place restarts
+title: Short term solution for in-place restarts
 kep-number: 467
 authors:
   - "@giuseppett"
