Update name of container of in-place restart agent

--- a/cmd/in-place-restart-agent/jobset-example.yaml
+++ b/cmd/in-place-restart-agent/jobset-example.yaml
@@ -23,7 +23,7 @@ spec:
             restartPolicy: OnFailure
             terminationGracePeriodSeconds: 0
             containers:
-            - name: agent
+            - name: in-place-restart-agent
               image: <CHANGE ME>
               env:
               - name: NAMESPACE
