--- a/charts/jobset/crds/jobset.x-k8s.io_jobsets.yaml
+++ b/charts/jobset/crds/jobset.x-k8s.io_jobsets.yaml
@@ -9566,6 +9566,7 @@ spec:
                         multiple ReplicatedJobs. Every claim in this list must have a matching (by name)
                         volumeMount in one container or initContainer in at least one ReplicatedJob template.
                         ReplicatedJob template must not have volumes with the same name as defined in this template.
+                        PVC template must not have the namespace parameter.
                         Generated PVC naming convention: <claim-name>-<jobset-name>
                         Example: "model-cache-trainjob" (shared volume across all ReplicatedJobs).
                       items:
@@ -10007,6 +10008,10 @@ spec:
                       type: array
                       x-kubernetes-list-type: atomic
                   type: object
+                  x-kubernetes-validations:
+                  - message: namespace cannot be set for VolumeClaimPolicies templates
+                    rule: self.templates.all(t, !has(t.metadata.namespace) || size(t.metadata.namespace)
+                      == 0)
                 maxItems: 50
                 type: array
                 x-kubernetes-list-type: atomic
