--- a/charts/jobset/tests/controller/pod_disruption_budget_test.yaml
+++ b/charts/jobset/tests/controller/pod_disruption_budget_test.yaml
@@ -61,3 +61,26 @@ tests:
           path: spec.minAvailable
           value: 2
 
+  - it: Should use custom maxUnavailable when set
+    set:
+      controller:
+        podDisruptionBudget:
+          enabled: true
+          minAvailable: null
+          maxUnavailable: 1
+    asserts:
+      - equal:
+          path: spec.maxUnavailable
+          value: 1
+
+  - it: Should fail when both minAvailable and maxUnavailable are set
+    set:
+      controller:
+        podDisruptionBudget:
+          enabled: true
+          minAvailable: 1
+          maxUnavailable: 1
+    asserts:
+      - failedTemplate:
+          errorMessage: "Cannot set both minAvailable and maxUnavailable in podDisruptionBudget"
+
