--- a/charts/jobset/values.yaml
+++ b/charts/jobset/values.yaml
@@ -81,7 +81,11 @@ controller:
     # -- Enable PodDisruptionBudget for the controller.
     enabled: false
     # -- Minimum number of controller pods that must be available during voluntary disruptions.
+    # Mutually exclusive with maxUnavailable.
     minAvailable: 1
+    # -- Maximum number of controller pods that can be unavailable during voluntary disruptions.
+    # Mutually exclusive with minAvailable.
+    maxUnavailable: null
 certManager:
   # -- Whether to use cert-manager to generate certificates for the jobset webhook.
   enable: false
