address copilot remarks

--- a/charts/jobset/templates/controller/pod_disruption_budget.yaml
+++ b/charts/jobset/templates/controller/pod_disruption_budget.yaml
@@ -23,10 +23,10 @@ metadata:
   labels:
     {{- include "jobset.controller.labels" . | nindent 4 }}
 spec:
-{{- if and .Values.controller.podDisruptionBudget.minAvailable .Values.controller.podDisruptionBudget.maxUnavailable }}
+{{- if and (ne .Values.controller.podDisruptionBudget.minAvailable nil) (ne .Values.controller.podDisruptionBudget.maxUnavailable nil) }}
 {{- fail "Cannot set both minAvailable and maxUnavailable in podDisruptionBudget" }}
 {{- end }}
-{{- if .Values.controller.podDisruptionBudget.maxUnavailable }}
+{{- if ne .Values.controller.podDisruptionBudget.maxUnavailable nil }}
   maxUnavailable: {{ .Values.controller.podDisruptionBudget.maxUnavailable }}
 {{- else }}
   minAvailable: {{ .Values.controller.podDisruptionBudget.minAvailable }}
