--- a/charts/jobset/values.yaml
+++ b/charts/jobset/values.yaml
@@ -81,10 +81,10 @@ controller:
     # -- Enable PodDisruptionBudget for the controller.
     enabled: false
     # -- (int) Minimum number of controller pods that must be available during voluntary disruptions.
-    # Mutually exclusive with maxUnavailable.
+    # If maxUnavailable is set, this value is ignored.
     minAvailable: 1
     # -- (int) Maximum number of controller pods that can be unavailable during voluntary disruptions.
-    # Mutually exclusive with minAvailable.
+    # Takes precedence over minAvailable if set.
     maxUnavailable: null
 certManager:
   # -- Whether to use cert-manager to generate certificates for the jobset webhook.
