Update RBAC to only create PVCs

--- a/charts/jobset/templates/controller/cluster_role.yaml
+++ b/charts/jobset/templates/controller/cluster_role.yaml
@@ -41,6 +41,12 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - persistentvolumeclaims
+  verbs:
+  - create
+- apiGroups:
+  - ""
+  resources:
   - pods
   verbs:
   - delete
@@ -52,7 +58,6 @@ rules:
 - apiGroups:
   - ""
   resources:
-  - persistentvolumeclaims
   - services
   verbs:
   - create
