--- a/charts/jobset/crds/jobset.x-k8s.io_jobsets.yaml
+++ b/charts/jobset/crds/jobset.x-k8s.io_jobsets.yaml
@@ -94,7 +94,11 @@ spec:
                   maxRestarts:
                     description: |-
                       maxRestarts defines the limit on the number of JobSet restarts.
-                      A restart is achieved by recreating all active child jobs.
+                      If the restart strategy "InPlaceRestart" is used, this field
+                      also defines the limit on the number of container restarts of
+                      any child container. This is required to handle the edge case
+                      in which a container keeps failing too fast to complete a JobSet
+                      restart.
                     format: int32
                     type: integer
                   restartStrategy:
