Adding labels to avoid conflicts with other controller-managers in the same namespace when deployed with kustomize
Signed-off-by: Akshay Chitneni <achitneni@apple.com>

--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -8,9 +8,11 @@ namespace: jobset-system
 # field above.
 namePrefix: jobset-
 
-# Labels to add to all resources and selectors.
-#commonLabels:
-#  someName: someValue
+# Common labels to add to all resources and selectors (matches Helm behavior).
+commonLabels:
+  app.kubernetes.io/name: jobset
+  app.kubernetes.io/instance: jobset
+  app.kubernetes.io/managed-by: kustomize
 
 resources:
 - ../components/crd
