Switch controllers to events.k8s.io/v1

--- a/charts/jobset/templates/controller/cluster_role.yaml
+++ b/charts/jobset/templates/controller/cluster_role.yaml
@@ -22,7 +22,7 @@ metadata:
     {{- include "jobset.controller.labels" . | nindent 4 }}
 rules:
 - apiGroups:
-  - ""
+  - events.k8s.io
   resources:
   - events
   verbs:
